提交git过滤文件

--- a/dubbo-user/provider/pom.xml
+++ b/dubbo-user/provider/pom.xml
@@ -73,10 +73,22 @@
                 </exclusions>
             </dependency>
             <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>4.1.38.Final</version>
+            </dependency>
+
+        <!--<dependency>
                 <groupId>com.101tec</groupId>
                 <artifactId>zkclient</artifactId>
                 <version>0.11</version>
-            </dependency>
+            </dependency>-->
+
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+            <version>4.2.0</version>
+        </dependency>
 
         <!-- 数据库连接池-->
             <dependency>
