--- a/dubbo-user/provider/src/main/resources/application.properties
+++ b/dubbo-user/provider/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 application.name=dubbo-user
 dubbo.service.provider.port=20881
 dubbo.service.provider.threads=200
-dubbo.cache.dir=d:/cache
 
 dubbo.zk.servers=127.0.0.1:2181
 dubbo.zk.group=dubbo-dev
-dubbo.application.owner=mic,feifei
+dubbo.application.owner=shiyifan
 dubbo.protocol.accesslog=c:/logs/dubbo-user.log
