--- a/dubbo-user/user-provider/src/main/resources/application.properties
+++ b/dubbo-user/user-provider/src/main/resources/application.properties
@@ -6,3 +6,7 @@ dubbo.zk.servers=127.0.0.1:2181
 dubbo.zk.group=dubbo-dev
 dubbo.application.owner=shiyifan
 dubbo.protocol.accesslog=c:/logs/dubbo-user.log
+
+
+#jwt
+jwt.expire=300
