--- a/dubbo-user/pom.xml
+++ b/dubbo-user/pom.xml
@@ -9,8 +9,8 @@
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
   <modules>
-    <module>api</module>
-    <module>provider</module>
+    <module>user-api</module>
+    <module>user-provider</module>
   </modules>
 
   <name>dubbo-user</name>
