--- a/dubbo-user/user-provider/pom.xml
+++ b/dubbo-user/user-provider/pom.xml
@@ -9,9 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>provider</artifactId>
+    <artifactId>user-provider</artifactId>
 
-    <name>provider</name>
+    <name>user-provider</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
@@ -24,7 +24,7 @@
     <dependencies>
             <dependency>
                 <groupId>com.shiyifan.dubbo.user</groupId>
-                <artifactId>api</artifactId>
+                <artifactId>user-api</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
@@ -81,6 +81,19 @@
                 <groupId>io.netty</groupId>
                 <artifactId>netty-all</artifactId>
                 <version>4.1.38.Final</version>
+            </dependency>
+
+            <!-- jwt -->
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>0.9.1</version>
+            </dependency>
+            <!-- 时间控件-->
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>2.10.3</version>
             </dependency>
 
 
