--- a/pinyg-parent/pom.xml
+++ b/pinyg-parent/pom.xml
@@ -5,17 +5,21 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.shiyifan.parent</groupId>
-  <artifactId>pingyg-parent</artifactId>
+  <artifactId>pinyg-parent</artifactId>
+  <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
+  <modules>
+    <module>parent-web</module>
+  </modules>
 
-  <name>pingyg-parent</name>
+  <name>pinyg-parent</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
