--- a/dubbo-user/user-api/pom.xml
+++ b/dubbo-user/user-api/pom.xml
@@ -8,10 +8,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>user-api</artifactId>
-
     <name>user-api</name>
+    <packaging>jar</packaging>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
@@ -20,14 +19,5 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
-
-    </dependencies>
-
 
 </project>
