--- a/dubbo-user/user-provider/pom.xml
+++ b/dubbo-user/user-provider/pom.xml
@@ -8,10 +8,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>user-provider</artifactId>
-
     <name>user-provider</name>
+    <packaging>jar</packaging>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
