--- a/pinyg-parent/parent-web/pom.xml
+++ b/pinyg-parent/parent-web/pom.xml
@@ -18,7 +18,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <spring.version>5.0.4.RELEASE</spring.version>
+        <spring.version>5.0.7.RELEASE</spring.version>
     </properties>
             <dependencyManagement>
                 <dependencies>
@@ -140,6 +140,129 @@
                         <version>4.2.0</version>
                     </dependency>
 
+                    <dependency>
+                        <groupId>org.apache.commons</groupId>
+                        <artifactId>commons-lang3</artifactId>
+                        <version>3.1</version>
+                    </dependency>
+
+                    <dependency>
+                        <groupId>com.google.guava</groupId>
+                        <artifactId>guava</artifactId>
+                        <version>18.0</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.alibaba</groupId>
+                        <artifactId>fastjson</artifactId>
+                        <version>1.2.59</version>
+                    </dependency>
+                    <!--jms jar-->
+                    <dependency>
+                        <groupId>org.apache.activemq</groupId>
+                        <artifactId>activemq-all</artifactId>
+                        <version>5.15.0</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.xbean</groupId>
+                        <artifactId>xbean-spring</artifactId>
+                        <version>3.16</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.activemq</groupId>
+                        <artifactId>activemq-pool</artifactId>
+                        <version>5.9.0</version>
+                    </dependency>
+                    <!--jms jar-->
+                    <!-- Spring 升级4+ 依赖的JSON包 -->
+                    <dependency>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-databind</artifactId>
+                        <version>2.7.4</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-core</artifactId>
+                        <version>2.7.4</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-annotations</artifactId>
+                        <version>2.7.4</version>
+                    </dependency>
+                    <!-- /Spring 升级4+ 依赖的JSON包 -->
+
+                    <!--common jar-->
+                    <dependency>
+                        <groupId>commons-collections</groupId>
+                        <artifactId>commons-collections</artifactId>
+                        <version>3.2.2</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.commons</groupId>
+                        <artifactId>commons-pool2</artifactId>
+                        <version>2.4.2</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>commons-configuration</groupId>
+                        <artifactId>commons-configuration</artifactId>
+                        <version>1.8</version>
+                    </dependency>
+                    <!--common jar-->
+
+                    <!-- velocity begin -->
+                    <dependency>
+                        <groupId>org.apache.velocity</groupId>
+                        <artifactId>velocity-tools</artifactId>
+                        <version>2.0</version>
+                        <exclusions>
+                            <exclusion>
+                                <artifactId>dom4j</artifactId>
+                                <groupId>dom4j</groupId>
+                            </exclusion>
+                            <exclusion>
+                                <artifactId>struts-core</artifactId>
+                                <groupId>org.apache.struts</groupId>
+                            </exclusion>
+                            <exclusion>
+                                <artifactId>struts-tiles</artifactId>
+                                <groupId>org.apache.struts</groupId>
+                            </exclusion>
+                            <exclusion>
+                                <artifactId>struts-taglib</artifactId>
+                                <groupId>org.apache.struts</groupId>
+                            </exclusion>
+                            <exclusion>
+                                <groupId>commons-logging</groupId>
+                                <artifactId>commons-logging</artifactId>
+                            </exclusion>
+                        </exclusions>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.velocity</groupId>
+                        <artifactId>velocity</artifactId>
+                        <version>1.7</version>
+                    </dependency>
+                    <!--logback+slf4j-->
+                    <dependency>
+                        <groupId>ch.qos.logback</groupId>
+                        <artifactId>logback-classic</artifactId>
+                        <version>1.1.3</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.logback-extensions</groupId>
+                        <artifactId>logback-ext-spring</artifactId>
+                        <version>0.1.2</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>jcl-over-slf4j</artifactId>
+                        <version>1.7.12</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.github.penggle</groupId>
+                        <artifactId>kaptcha</artifactId>
+                        <version>2.3.2</version>
+                    </dependency>
                 </dependencies>
             </dependencyManagement>
 
