--- a/pinyg-parent/parent-web/pom.xml
+++ b/pinyg-parent/parent-web/pom.xml
@@ -13,7 +13,7 @@
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
     <packaging>pom</packaging>
-
+     <version>1.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
