--- a/pinyg-protal/src/main/webapp/WEB-INF/web.xml
+++ b/pinyg-protal/src/main/webapp/WEB-INF/web.xml
@@ -43,9 +43,9 @@
 
   <servlet-mapping>
     <servlet-name>springmvc</servlet-name>
-    <url-pattern>*.shtml</url-pattern>
+    <url-pattern>*.html</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
-    <welcome-file>/index.shtml</welcome-file>
+    <welcome-file>/index.html</welcome-file>
   </welcome-file-list>
 </web-app>
