--- a/dubbo-user/pom.xml
+++ b/dubbo-user/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.shiyifan.dubbo.user</groupId>
+  <groupId>com.pinyg.dubbo.user</groupId>
   <artifactId>dubbo-user</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
