--- a/dubbo-user/user-provider/pom.xml
+++ b/dubbo-user/user-provider/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>dubbo-user</artifactId>
-        <groupId>com.shiyifan.dubbo.user</groupId>
+        <groupId>com.pinyg.dubbo.user</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -22,7 +22,7 @@
 
     <dependencies>
             <dependency>
-                <groupId>com.shiyifan.dubbo.user</groupId>
+                <groupId>com.pinyg.dubbo.user</groupId>
                 <artifactId>user-api</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
