--- a/pinyg-protal/pom.xml
+++ b/pinyg-protal/pom.xml
@@ -4,12 +4,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>parent-web</artifactId>
-    <groupId>com.shiyifan.parent</groupId>
+    <groupId>com.pinyg.parent</groupId>
     <version>1.0-SNAPSHOT</version>
     <relativePath/>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.shiyifan.protal</groupId>
+  <groupId>com.pinyg.protal</groupId>
   <artifactId>pinyg-protal</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
@@ -53,7 +53,11 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>com.pinyg.dubbo.sellergoods</groupId>
+      <artifactId>sellergoods-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
 
 
     <dependency>
@@ -79,7 +83,7 @@
     </dependency>
     <!--  user api -->
     <dependency>
-      <groupId>com.shiyifan.dubbo.user</groupId>
+      <groupId>com.pinyg.dubbo.user</groupId>
       <artifactId>user-api</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
