--- a/pinyg-manager-web/pom.xml
+++ b/pinyg-manager-web/pom.xml
@@ -13,7 +13,7 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>pinyg-manager-web Maven Webapp</name>
+  <name>pinyg-manager-web</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -54,24 +54,6 @@
       <version>${spring.version}</version>
     </dependency>
     <!-- dubbo相关 -->
-    <!--dubbo-->
-   <!-- <dependency>
-      <groupId>com.alibaba</groupId>
-      <artifactId>dubbo</artifactId>
-      <version>2.6.7</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.springframework</groupId>
-          <artifactId>spring</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.curator</groupId>
-      <artifactId>curator-framework</artifactId>
-      <version>4.2.0</version>
-    </dependency>-->
-
       <dependency>
           <groupId>com.alibaba</groupId>
           <artifactId>dubbo</artifactId>
