--- a/pinyg-parent/parent-web/pom.xml
+++ b/pinyg-parent/parent-web/pom.xml
@@ -78,6 +78,17 @@
                         <artifactId>spring-test</artifactId>
                         <version>${spring.version}</version>
                     </dependency>
+                    <!-- spring security-->
+                    <dependency>
+                        <groupId>org.springframework.security</groupId>
+                        <artifactId>spring-security-web</artifactId>
+                        <version>${spring.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.springframework.security</groupId>
+                        <artifactId>spring-security-web</artifactId>
+                        <version>${spring.version}</version>
+                    </dependency>
                     <!--dubbo-->
                    <!-- <dependency>
                         <groupId>com.alibaba</groupId>
