--- a/dubbo-sellergoods/sellergoods-provider/pom.xml
+++ b/dubbo-sellergoods/sellergoods-provider/pom.xml
@@ -87,6 +87,11 @@
             <artifactId>sellergoods-dao</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.shiyifan</groupId>
+            <artifactId>dubbo-hystrix-support</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
