--- a/pinyg-manager-web/pom.xml
+++ b/pinyg-manager-web/pom.xml
@@ -22,6 +22,13 @@
   </properties>
 
       <dependencies>
+
+          <dependency>
+              <groupId>com.shiyifan</groupId>
+              <artifactId>dubbo-hystrix-support</artifactId>
+              <version>1.0-SNAPSHOT</version>
+          </dependency>
+
           <!-- Spring -->
           <dependency>
             <groupId>org.springframework</groupId>
