--- a/dubbo-sellergoods/sellergoods-api/pom.xml
+++ b/dubbo-sellergoods/sellergoods-api/pom.xml
@@ -30,5 +30,10 @@
             <artifactId>dubbo-spi</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.shiyifan</groupId>
+            <artifactId>dubbo-hystrix-support</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
