--- a/dubbo-sellergoods/pom.xml
+++ b/dubbo-sellergoods/pom.xml
@@ -102,7 +102,6 @@
         <artifactId>pagehelper</artifactId>
         <version>5.1.10</version>
       </dependency>
-
       <!--dubbo-->
       <dependency>
         <groupId>com.alibaba</groupId>
@@ -124,6 +123,11 @@
         <groupId>com.101tec</groupId>
         <artifactId>zkclient</artifactId>
         <version>0.11</version>
+      </dependency>
+      <dependency>
+        <groupId>org.ehcache</groupId>
+        <artifactId>ehcache</artifactId>
+        <version>3.8.1</version>
       </dependency>
 
     </dependencies>
