--- a/dubbo-sellergoods/sellergoods-api/pom.xml
+++ b/dubbo-sellergoods/sellergoods-api/pom.xml
@@ -27,13 +27,8 @@
         </dependency>
         <dependency>
             <groupId>com.shiyifan</groupId>
-            <artifactId>dubbo-spi</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.shiyifan</groupId>
             <artifactId>dubbo-hystrix-support</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
     </dependencies>
 </project>
