--- a/dubbo-monitor/src/main/resources/application.properties
+++ b/dubbo-monitor/src/main/resources/application.properties
@@ -14,5 +14,31 @@ spring.datasource.password=root
 spring.datasource.username=root
 
 
+spring.datasource.data-username=
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+
+
+spring.redis.cluster.nodes=172.16.4.205:6301,172.16.4.205:6302,172.16.4.206:6301,172.16.4.206:6302,172.16.4.126:6301,172.16.4.126:6302
+spring.redis.timeout=5000
+#连接池最大连接数
+#spring.redis.lettuce.pool.max-active=8
+#连接池最大空闲连接8
+#spring.redis.lettuce.pool.max-idle=8
+#连接池最小连接0
+#spring.redis.lettuce.pool.min-idle=0
+
+
+#连接池最大连接数（使用负值表示没有限制）
+spring.redis.jedis.pool.max-active=200
+#连接池中的最大空闲连接
+spring.redis.jedis.pool.max-idle=10
+# 连接池中的最小空闲连接
+spring.redis.jedis.pool.min-idle=0  
+#连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.jedis.pool.max-wait=-1
+
+
+
+
 #showSql
 logging.level.com.lenovoconnect.dao:debug
